[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/DoubleFeature20.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Temp/CanvasLayer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("RoundLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
visible = false
margin_right = 109.0
margin_bottom = 20.0
text = "Get Bullet Pool"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Round" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundLabel" type="Label" parent="Round"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 296.0
margin_right = 960.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 1 )
text = "Wave [Number]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundAnim" type="AnimationPlayer" parent="Round"]
anims/fade_in = SubResource( 2 )

[node name="Score" type="Label" parent="."]
visible = false
margin_top = 20.0
margin_right = 960.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "Zombies Killed : 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
